// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TabList renders tabs when disabled 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="group/fui-tab-list"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":false,\\"hasDefault\\":true}}"
    role="tablist"
  >
    <button
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      disabled=""
      role="tab"
      type="button"
      value="1"
    >
      <span
        class=""
      >
        First
      </span>
      <span
        class=""
      >
        First
      </span>
    </button>
    <button
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":true}}"
      disabled=""
      role="tab"
      type="button"
      value="2"
    >
      <span
        class=""
      >
        Second
      </span>
    </button>
    <button
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      disabled=""
      role="tab"
      type="button"
      value="3"
    >
      <span
        class=""
      >
        Third
      </span>
      <span
        class=""
      >
        Third
      </span>
    </button>
  </div>
</div>
`;

exports[`TabList renders tabs with default selected tab 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="group/fui-tab-list"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":false,\\"hasDefault\\":true}}"
    role="tablist"
  >
    <button
      aria-selected="false"
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      type="button"
      value="1"
    >
      <span
        class=""
      >
        First
      </span>
      <span
        class=""
      >
        First
      </span>
    </button>
    <button
      aria-selected="true"
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":true}}"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      type="button"
      value="2"
    >
      <span
        class=""
      >
        Second
      </span>
    </button>
    <button
      aria-selected="false"
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      type="button"
      value="3"
    >
      <span
        class=""
      >
        Third
      </span>
      <span
        class=""
      >
        Third
      </span>
    </button>
  </div>
</div>
`;

exports[`TabList renders with no tabs 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="group/fui-tab-list"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":false,\\"hasDefault\\":true}}"
    role="tablist"
  />
</div>
`;

exports[`TabList renders with tabs 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="group/fui-tab-list"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":false,\\"hasDefault\\":true}}"
    role="tablist"
  >
    <button
      aria-selected="false"
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      type="button"
      value="1"
    >
      <span
        class=""
      >
        First
      </span>
      <span
        class=""
      >
        First
      </span>
    </button>
    <button
      aria-selected="false"
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      type="button"
      value="2"
    >
      <span
        class=""
      >
        Second
      </span>
      <span
        class=""
      >
        Second
      </span>
    </button>
    <button
      aria-selected="false"
      class="group/fui-tab"
      data-orientation="horizontal"
      data-size="medium"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--fui-Tab__indicator--offset: 0px; --fui-Tab__indicator--scale: 1;"
      type="button"
      value="3"
    >
      <span
        class=""
      >
        Third
      </span>
      <span
        class=""
      >
        Third
      </span>
    </button>
  </div>
</div>
`;
